[gd_scene load_steps=2 format=2]

[ext_resource path="res://chatManager.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="inputMessage" type="LineEdit" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="chatBox" type="TextEdit" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -34.0

[node name="listeUser" type="TextEdit" parent="Panel/chatBox"]
anchor_left = 0.484
anchor_top = 0.804
anchor_right = 1.0
anchor_bottom = 0.94
margin_left = 0.383972
margin_top = -0.0640259
margin_bottom = -0.0400391

[node name="leave" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 28.0
text = "leave"

[node name="time" type="Label" parent="Panel"]
margin_left = 873.0
margin_top = 497.0
margin_right = 1020.0
margin_bottom = 559.0

[connection signal="button_up" from="Panel/leave" to="." method="_on_Button_button_up"]
